--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
+    <string name="retry">Retry</string>
     <string name="app_name">InterviewPrepare</string>
+    <string name="loading_description">Loading</string>
+    <string name="error_description">Something went wrong..\nTry later, please!</string>
 </resources>
